stylesheet.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

* {
    font-size: 16px;
}

body {
    display: flex;
    margin: 0;
    padding: 0;
    height: 100dvh;
    width: 100dvw;
    font-family: "Arial Black", "Arial Bold", Gadget, sans-serif;
    font-weight: bolder;
    overflow: hidden;
}

.sidebar {
    width: 40dvw;
}

.sidebar-img {
    position: relative;
}

.image-credit {
    position: absolute;
    color: white;
    left: 142px;
    bottom: 4px;
}

.filler-text {
    width: 60%;
    box-sizing: border-box;
    margin-block-start: 1rem;
    margin-block-end: 1rem;
}

.page-content {
    display: flex;
    width: 60dvw;
    font-size: 1.5rem;
    flex-direction: column;
    justify-content: center;
}

.form-items {
    display: flex;
    border: 0;
}

label {
    font-size: 1rem;
    color: lightslategrey;
}

input {
    border: #E5E7EB
}

.form-input-fields {
    display: flex;
    flex-direction: column;
}

